--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,8 @@
 	<classpathentry kind="src" output="production/classes" path="production/source"/>
 	<classpathentry kind="src" path="test/source"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
+	<classpathentry kind="lib" path="test/vendor/junit-4.8.2.jar"/>
+	<classpathentry kind="lib" path="test/vendor/windowlicker-core-DEV.jar"/>
+	<classpathentry kind="lib" path="test/vendor/windowlicker-swing-DEV.jar"/>
 	<classpathentry kind="output" path="test/classes"/>
 </classpath>
