--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,8 @@
 	<classpathentry kind="lib" path="test/vendor/junit-4.8.2.jar"/>
 	<classpathentry kind="lib" path="test/vendor/windowlicker-core-DEV.jar"/>
 	<classpathentry kind="lib" path="test/vendor/windowlicker-swing-DEV.jar"/>
+	<classpathentry kind="lib" path="test/vendor/smack.jar"/>
+	<classpathentry kind="lib" path="test/vendor/hamcrest-core-1.3.0RC1.jar"/>
+	<classpathentry kind="lib" path="test/vendor/hamcrest-library-1.3.0RC1.jar"/>
 	<classpathentry kind="output" path="test/classes"/>
 </classpath>
