--- a/.classpath
+++ b/.classpath
@@ -3,11 +3,11 @@
 	<classpathentry kind="src" output="production/classes" path="production/source"/>
 	<classpathentry kind="src" path="test/source"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="test/vendor/junit-4.8.2.jar"/>
 	<classpathentry kind="lib" path="test/vendor/windowlicker-core-DEV.jar"/>
 	<classpathentry kind="lib" path="test/vendor/windowlicker-swing-DEV.jar"/>
 	<classpathentry kind="lib" path="test/vendor/smack.jar"/>
-	<classpathentry kind="lib" path="test/vendor/hamcrest-core-1.3.0RC1.jar"/>
 	<classpathentry kind="lib" path="test/vendor/hamcrest-library-1.3.0RC1.jar"/>
+	<classpathentry kind="lib" path="test/vendor/junit-dep-4.9b2.jar"/>
+	<classpathentry kind="lib" path="test/vendor/hamcrest-core-1.3.0RC1.jar"/>
 	<classpathentry kind="output" path="test/classes"/>
 </classpath>
