--- a/.classpath
+++ b/.classpath
@@ -6,9 +6,11 @@
 	<classpathentry kind="lib" path="system-test/vendor/hamcrest-core-1.3.0RC1.jar"/>
 	<classpathentry kind="lib" path="system-test/vendor/hamcrest-library-1.3.0RC1.jar"/>
 	<classpathentry kind="lib" path="system-test/vendor/junit-dep-4.9b2.jar"/>
-	<classpathentry kind="lib" path="system-test/vendor/smack.jar"/>
+	<classpathentry kind="lib" path="system-test/vendor/smack.jar" sourcepath="system-test/vendor/smack-3.1.0/source"/>
 	<classpathentry kind="lib" path="system-test/vendor/windowlicker-core-DEV.jar"/>
 	<classpathentry kind="lib" path="system-test/vendor/windowlicker-swing-DEV.jar"/>
 	<classpathentry kind="lib" path="system-test/vendor/windowlicker-web-DEV.jar"/>
+	<classpathentry kind="lib" path="system-test/vendor/jmock-2.6.0-RC2/jmock-2.6.0-RC2.jar"/>
+	<classpathentry kind="lib" path="system-test/vendor/jmock-2.6.0-RC2/jmock-junit4-2.6.0-RC2.jar"/>
 	<classpathentry kind="output" path="test/classes"/>
 </classpath>
