--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="src" output="production/classes" path="production/source"/>
 	<classpathentry kind="src" path="system-test/source"/>
+	<classpathentry kind="src" output="test/classes" path="test/source"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="system-test/vendor/hamcrest-core-1.3.0RC1.jar"/>
 	<classpathentry kind="lib" path="system-test/vendor/hamcrest-library-1.3.0RC1.jar"/>
