--- a/.classpath
+++ b/.classpath
@@ -6,7 +6,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="system-test/vendor/hamcrest-core-1.3.0RC1.jar"/>
 	<classpathentry kind="lib" path="system-test/vendor/hamcrest-library-1.3.0RC1.jar"/>
-	<classpathentry kind="lib" path="system-test/vendor/junit-dep-4.9b2.jar"/>
+	<classpathentry kind="lib" path="system-test/vendor/junit-dep-4.9b2.jar" sourcepath="/Users/jbrains/ThirdParty/junit4.9b2/junit-4.9b2-src.jar"/>
 	<classpathentry kind="lib" path="system-test/vendor/windowlicker-core-DEV.jar"/>
 	<classpathentry kind="lib" path="system-test/vendor/windowlicker-swing-DEV.jar"/>
 	<classpathentry kind="lib" path="system-test/vendor/windowlicker-web-DEV.jar"/>
